# effort_controller

./: .gitignore  .gitignore.save  README.md
.github/workflows/: humble.yml  industrial_ci_humble_action.yml  jazzy.yml  (+1 more)
cartesian_adaptive_impedance_controller/: CMakeLists.txt  README.md  cartesian_adaptive_impedance_controller_plugin.xml  package.xml
cartesian_adaptive_impedance_controller/include/cartesian_adaptive_impedance_controller/: cartesian_adaptive_impedance_controller.h  qpOASES.hpp
cartesian_adaptive_impedance_controller/include/cartesian_adaptive_impedance_controller/qpOASES/: Bounds.hpp  Bounds.ipp  Constants.hpp  ConstraintProduct.hpp  Constraints.hpp  Constraints.ipp  Flipper.hpp  Indexlist.hpp  Indexlist.ipp  LapackBlasReplacement.hpp  Matrices.hpp  MessageHandling.hpp  MessageHandling.ipp  Options.hpp  QProblem.hpp  QProblem.ipp  QProblemB.hpp  QProblemB.ipp  SQProblem.hpp  SQProblem.ipp  SQProblemSchur.hpp  SQProblemSchur.ipp  SparseSolver.hpp  SubjectTo.hpp  SubjectTo.ipp  Types.hpp  UnitTesting.hpp  Utils.hpp  Utils.ipp
cartesian_adaptive_impedance_controller/include/cartesian_adaptive_impedance_controller/qpOASES/extras/: OQPinterface.hpp  SolutionAnalysis.hpp  SolutionAnalysis.ipp
cartesian_adaptive_impedance_controller/src/: cartesian_adaptive_impedance_controller.cpp
cartesian_impedance_controller/: CMakeLists.txt  README.md  cartesian_impedance_controller_plugin.xml  package.xml
cartesian_impedance_controller/include/cartesian_impedance_controller/: cartesian_impedance_controller.h  compute_D.hpp  effort_impedance_controller.h  pseudo_inversion.h
cartesian_impedance_controller/src/: cartesian_impedance_controller.cpp
cbf_cartesian_impedance_controller/: CMakeLists.txt  README.md  cbf_cartesian_impedance_controller_plugin.xml  package.xml
cbf_cartesian_impedance_controller/include/cbf_cartesian_impedance_controller/: cbf_cartesian_impedance_controller.hpp  cbf_qp.hpp  conic_cbf.hpp  planes_cbf.hpp  pseudo_inversion.h  qp_wrapper.hpp  visualization.hpp
cbf_cartesian_impedance_controller/src/: cbf_cartesian_impedance_controller.cpp
debug_msg/: CMakeLists.txt  package.xml
debug_msg/msg/: Debug.msg
effort_controller_base/: CMakeLists.txt  README.md  ik_solver_plugin.xml  package.xml
effort_controller_base/include/effort_controller_base/: DampedLeastSquaresSolver.h  Filter.h  ForwardDynamicsSolver.h  IKSolver.h  JacobianTransposeSolver.h  PDController.h  SelectivelyDampedLeastSquaresSolver.h  SpatialPDController.h  Utility.h  chainjnttojacdotsolver.hpp  compute_D.hpp  double_diagonalization.hpp  effort_controller_base.h  pseudo_inversion.h
effort_controller_base/src/: DampedLeastSquaresSolver.cpp  ForwardDynamicsSolver.cpp  IKSolver.cpp  JacobianTransposeSolver.cpp  PDController.cpp  SelectivelyDampedLeastSquaresSolver.cpp  SpatialPDController.cpp  chainjnttojacdotsolver.cpp  effort_controller_base.cpp
franka_coppelia_hw/: CMakeLists.txt  README.md  coppelia_world.ttt  fraka_eff.ttt  franka_coppelia_hw.xml  package.xml
franka_coppelia_hw/bringup/config/: target_test_forward_position_publisher.yaml  target_test_joint_trajectory_publisher.yaml
franka_coppelia_hw/bringup/launch/: franka_coppelia_hw.launch.py  test_forward_position_controller.launch.py  test_joint_trajectory_controller.launch.py
franka_coppelia_hw/config/: franka_controllers_coppelia.yaml
franka_coppelia_hw/hardware/: HWInterface.cpp
franka_coppelia_hw/hardware/include/franka_coppelia_hw/: HWInterface.hpp  visibility_control.h
franka_coppelia_hw/meshes/visual/: franka_link0_vis_1.dae  franka_link1_vis_1.dae  franka_link2_vis_1.dae  franka_link2resp_coll_1.dae  franka_link2resp_coll_2.dae  franka_link2resp_coll_3.dae  franka_link2resp_coll_4.dae  franka_link3_vis_1.dae  franka_link3_vis_2.dae  franka_link3resp_coll_1.dae  franka_link3resp_coll_2.dae  franka_link4_vis_1.dae  franka_link4_vis_2.dae  franka_link4resp_coll_1.dae  franka_link4resp_coll_2.dae  franka_link4resp_coll_3.dae  franka_link4resp_coll_4.dae  franka_link5_vis_1.dae  franka_link5_vis_2.dae  franka_link5resp_coll_1.dae  franka_link5resp_coll_2.dae  franka_link5resp_coll_3.dae  franka_link5resp_coll_4.dae  franka_link5resp_coll_5.dae  franka_link5resp_coll_6.dae  franka_link6_vis_1.dae  franka_link6_vis_2.dae  franka_link6resp_coll_1.dae  franka_link6resp_coll_2.dae  franka_link6resp_coll_3.dae  franka_link6resp_coll_4.dae  franka_link6resp_coll_5.dae  franka_link6resp_coll_6.dae  franka_link6resp_coll_7.dae  franka_link6resp_coll_8.dae  franka_link6resp_coll_9.dae  franka_link7_vis_1.dae  franka_link7resp_coll_1.dae  franka_link7resp_coll_10.dae  franka_link7resp_coll_11.dae  (+14 more)
franka_coppelia_hw/rviz/: visualize_franka.rviz
franka_coppelia_hw/urdf/: hand.xacro  panda.urdf  panda_arm.ros2_control.xacro  panda_arm.urdf.xacro  panda_arm.xacro  test.xacro
gravity_compensation/: CMakeLists.txt  README.md  gravity_compensation_plugin.xml  package.xml
gravity_compensation/include/gravity_compensation/: gravity_compensation.h
gravity_compensation/src/: gravity_compensation.cpp
hocbf_cartesian_impedance_controller/: CMakeLists.txt  hocbf_cartesian_impedance_controller_plugin.xml  package.xml
hocbf_cartesian_impedance_controller/include/: visualization.hpp
hocbf_cartesian_impedance_controller/include/hocbf_cartesian_impedance_controller/: hocbf_cartesian_impedance_controller.hpp  planes_hocbf.hpp
hocbf_cartesian_impedance_controller/src/: hocbf_cartesian_impedance_controller.cpp
joint_impedance_controller/: CMakeLists.txt  README.md  joint_impedance_controller_plugin.xml  package.xml
joint_impedance_controller/include/joint_impedance_controller/: compute_D.hpp  joint_impedance_controller.h
joint_impedance_controller/src/: joint_impedance_controller.cpp
kuka_cartesian_impedance_controller/: CMakeLists.txt  README.md  kuka_cartesian_impedance_controller_plugin.xml  package.xml
kuka_cartesian_impedance_controller/include/kuka_cartesian_impedance_controller/: kuka_cartesian_impedance_controller.h
kuka_cartesian_impedance_controller/src/: kuka_cartesian_impedance_controller.cpp
