<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cartesian_adaptive_impedance_controller</name>
  <version>0.0.0</version>
  <description>Control your robot through Cartesian target poses and target wrenches</description>
  <maintainer email="scherzin@fzi.de">scherzin</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/fzi-forschungszentrum-informatik/cartesian_controllers</url> 
  <author email="scherzin@fzi.de">Stefan Scherzinger</author> 

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>effort_controller_base</depend>
  <depend>cartesian_impedance_controller</depend>
  <depend>controller_interface</depend>

  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/cartesian_adaptive_impedance_controller_plugin.xml"/>
  </export>
</package>
